type操作符接口
